# neuro-book

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  Dockerfile.runner  PROJECT-STATUS.md  README.en.md  README.md  RELEASE.md  architecture.md  bunfig.toml  config.example.yaml  docker-compose.yml  nuxt.config.ts  package.json  proper-lockfile.d.ts  vitest.config.ts  vue-shim.d.ts
.github/workflows/: product-platforms.yml  release-container.yml  release-manager.yml
app/composables/: useAgentSessionApi.ts  useAgentTraceApi.ts  useAuthSessionState.ts  useConfigApi.ts  useDesktopNotification.ts  useDialog.ts  useIdeTheme.ts  (+11 more)
docs/: README.md  blog-agent-rp-harness.md  deployment.md  index.md  introduction.md  operator-bridge.md  quick-start.md  writing-mode-world-engine-practice.md
prisma/: project.schema.prisma  schema.prisma
reference/: README.md
scripts/: check-profile.ts  create-admin.ts  deploy.mjs  migrate-config-system.ts  migrate-postgres-users-to-sqlite.mjs  neuro-book-deploy.mjs  prepare-profile-types.ts  seed-heroes-story.ts  seed-world-engine-demo.ts  smoke-agent.ts  variable.ts  warmup-dev-server.mjs  write-chapter-01-slices.ts
shared/: editor-workbench.test.ts  editor-workbench.ts  markdown-workbench.test.ts  markdown-workbench.ts  reference-core.ts  reference-trigger.test.ts  reference-trigger.ts
spec/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh
(+2299 files in other folders)
