[package]
name = "neuro-book-tauri"
version = "0.5.6"
description = "NeuroBook desktop shell"
authors = ["notnotype"]
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"

[lib]
name = "neuro_book_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
